<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connectify Concert</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Username</string>
    <string name="button_login">Login</string>
    <string name="title_activity_dash_board">Dash Board</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Connectify Concert</string>
    <string name="title_activity_project">Projects</string>
    <string name="title_activity_team">Team Details</string>
    <string name="title_activity_project_details">Project Details</string>
    <string name="title_activity_assign_activity">Assign Activity</string>
    <string name="project_name_textView">Project Name</string>
    <string name="project_id_textView"></string>
    <string name="manager_textView"></string>
    <string name="project_status_textView"></string>
    <string name="team_details_button">Get Team Details</string>
    <string name="loading_textView">Loading....</string>
    <string name="title_activity_team_details">TeamDetailsActivity</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="search_action_bar">Search</string>
    <string name="hint_to">Developer Name</string>
    <string name="hint_project">About Project</string>
    <string name="to_textview">To</string>
    <string name="about_textview">About</string>
    <string name="hint_desc_textview">Description</string>
    <string name="send_button">Send</string>
    <string name="cancel_button">Cancel</string>
    <string name="empty">empty</string>
    <string name="title_activity_file_details">FileDetailsActivity</string>
    <string name="title_activity_upload_progress">UploadProgressActivity</string>
    <string name="dev_textView">Dev</string>
    <string name="project_textView">Project</string>
    <string name="progress_textView">Progress</string>
    <string name="upload_button">Upload Progress</string>

</resources>
