<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
     
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/rootLayout" >
    <!--
    #4ea0ab
    -->
    <Button
        android:id="@+id/bSubmit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/nav_button"
        android:onClick="loginfun"
        android:text="@string/button_login" />
    <EditText
        android:id="@+id/etPass"
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etUser"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etUser"
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/hint_login" >

        <requestFocus />
    </EditText>

    

</RelativeLayout>
